# cosmic-ext-calculator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-02-cosmic-calculator.md  2026-07-23-fork-coexistence-and-releases.md
docs/superpowers/specs/: 2026-04-02-cosmic-calculator-design.md  2026-07-23-fork-coexistence-and-releases-design.md
i18n/en/: cosmic_calc_plus.ftl  cosmic_ext_calculator.ftl
res/: dev.dcristob.Calculator.desktop  dev.dcristob.Calculator.metainfo.xml
src/: main.rs
src/app/: config.rs  mod.rs  settings.rs
src/core/: icons.rs  keybinds.rs  localization.rs  mod.rs
src/engine/: engineering.rs  financial.rs  mod.rs  parser.rs  standard.rs
src/ui/: engineering.rs  financial.rs  history.rs  mod.rs  settings.rs  standard.rs
tests/: engineering_engine_tests.rs  financial_engine_tests.rs  parser_tests.rs  standard_engine_tests.rs
