[package]
name = "cosmic-ext-calculator"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.3"
rust-embed = "8.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
arboard = "3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit", "about", "wayland"]

[features]
default = ["i18n"]
i18n = ["dep:i18n-embed"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
optional = true
